Makes opens and clickthroughs work with anonymous data, as well as prettying up the graphs.

--- a/dada/templates/plugins/tracker/clickthrough_table.tmpl
+++ b/dada/templates/plugins/tracker/clickthrough_table.tmpl
@@ -150,7 +150,7 @@
 				<button 
 					type="button" 
 					name=""
-					class="button small alert tracker_delete_msg_id_data" 
+					class="small button alert tracker_delete_msg_id_data" 
 					data-mid="<!-- tmpl_var mid -->" 
 				>
 					<i class="fi-x"></i>
