Making the tracker plugin initial table/graphs look good.

--- a/dada/static/css/dada_mail.css
+++ b/dada/static/css/dada_mail.css
@@ -127,5 +127,15 @@ a.menu_disabled:active {
 	background-color: #ccff15;
 }
 
+.dm_tighter td { 
+	font-size: smaller;
+	padding: 4px;
+}
+
+.dm_tighter td button, .button {
+	margin: 0;
+}
+
+
 
 
